--- a/package.json
+++ b/package.json
@@ -35,5 +35,9 @@
   "devDependencies": {
     "jest": "^26.6.3",
     "supertest": "^6.1.3"
+  },
+  "engines":{
+    "node": "^14.2.0",
+    "npm": "^7.5.4"
   }
 }
